<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_trip_image"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@string/package_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/txt_trip_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/trip_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_trip_image" />

    <TextView
        android:id="@+id/txt_trip_destination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txt_trip_name"
        app:layout_constraintBottom_toBottomOf="@+id/txt_trip_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Disney 2023"
        tools:text="Disney 2023" />

    <TextView
        android:id="@+id/txt_trip_destination_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/destination"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_trip_name" />

    <TextView
        android:id="@+id/txt_trip_destination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_trip_destination_label"
        app:layout_constraintBottom_toBottomOf="@+id/txt_trip_destination_label"
        android:text="Disneyland"
        tools:text="Disneyland" />

    <TextView
        android:id="@+id/txt_trip_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/trip_start"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_trip_destination_label" />

    <TextView
        android:id="@+id/txt_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="15/08/2023"
        android:text="15/08/2023"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_trip_start"
        app:layout_constraintStart_toStartOf="@+id/txt_trip_destination"/>

    <TextView
        android:id="@+id/txt_trip_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/trip_end"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_trip_start" />

    <TextView
        android:id="@+id/txt_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="20/08/2023"
        android:text="20/08/2023"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_trip_end"
        app:layout_constraintStart_toStartOf="@+id/txt_start_date"/>

    <Button
        android:id="@+id/btn_edit_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/edit_trip"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
